--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="url=http://kobai.github.io/personal-website">
+    <meta http-equiv="Refresh" content="0; url=http://kobai.github.io/personal-website">
   </head>
 </html>
