--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 
 <head>
-  <meta http-equiv="Refresh" content="0; url=http://kobai.github.io/personal-website">
+  <meta http-equiv="Refresh" content="2; url=http://kobai.github.io/personal-website">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
-  <div class="card center" style="width: 40vw; position: fixed; top: 30%; left: 30%;">
+<body style="display:flex; align-items: center; justify-content: center; height: 90vh">
+  <div class="card center" style="width: 40vw; position: flex;">
     <div class="card-body">
-      <h5 class="card-title">Whoops!!</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Looks like the redirect failed ¯\_(ツ)_/¯</h6>
-      <p class="card-text">Please click the link below to continue.</p>
+      <h5 class="card-title">Redirecting to the new website!!</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Please stand by :)</h6>
+      <p class="card-text">Alternatively, please click the link below to continue.</p>
       <a href="http://kobai.github.io/personal-website" class="card-link">Personal Website</a>
     </div>
   </div>
