--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body style="display:flex; align-items: center; justify-content: center; height: 90vh">
-  <div class="card center" style="width: 40vw; position: flex;">
+
+<body style="display:flex; align-items: center; justify-content: center; height: 90vh; background-image: url('10.jpg'); background-size: cover">
+  <div class="card center" style="width: 800px; position: flex;">
     <div class="card-body">
       <h5 class="card-title">Redirecting to the new website!!</h5>
       <h6 class="card-subtitle mb-2 text-muted">Please stand by :)</h6>
